--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Clock</title>
         <style>
+         body{
+            background-color: rgb(184, 252, 252);
+         }
             .nav-1{
                 margin-bottom: 30px;
             }
@@ -51,6 +54,7 @@
             height: 30vh;
             color: red;
             border: 1px solid black;
+            border-radius: 50%;
             margin: auto;
             text-align: center;
             background: radial-gradient(white, pink);
@@ -72,10 +76,12 @@
             height: 30vh;
             color: red;
             border: 1px solid black;
+            border-radius: 50%;
             margin: auto;
             text-align: center;
-            background: radial-gradient(white, pink);
+            /* background: radial-gradient(white, pink); */
             align-items: center;
+            background: transparent;
             }
             .nav-1{
             background-color: rgb(118, 231, 186);
@@ -93,7 +99,7 @@
             height: 30vh;
             color: red;
             border: 1px solid black;
-            margin: 0px 200px;
+            margin: 0px auto;
             text-align: center;
             background: radial-gradient(white, pink);
             align-items: center;
@@ -117,8 +123,9 @@
             border: 1px solid black;
             margin: auto;
             text-align: center;
-            background: radial-gradient(white, pink);
+            /* background: radial-gradient(white, pink); */
             align-items: center;
+            background: transparent;
             }
             .nav-1{
             background-color: rgb(110, 177, 236);
@@ -154,6 +161,7 @@
         <h1>Amit Dhatterwal</h1>
     </nav>
     <div class="container">
+        <!-- <img src="./IMG20230507160213.jpg"> -->
         <h1 class="h1">Time</h1>
         <h2 id="time"></h2>
     </div>
