--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             height: 30vh;
             color: red;
             border: 1px solid black;
+            border-radius: 50%;
             margin: auto;
             text-align: center;
             background: radial-gradient(white, pink);
