--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             background: radial-gradient(white, pink);
             align-items: center;
             }
-           
+           .h1{
+            margin-top: 10px;
+           }
             .nav-1{
             background-color: rgb(163, 239, 116);
             height: 8vh;
@@ -48,6 +50,8 @@
         .nav-1 h1{
             text-align: center;
             margin-top: 5px;
+            color: blue;
+            /* background: linear-gradient(blue , red); */
         }
         }
         @media (min-width:319px) and (max-width:480px){
@@ -71,6 +75,8 @@
         .nav-1 h1{
             text-align: center;
             margin-top: 5px;
+            color: blue;
+            /* background: linear-gradient(blue , red); */
         }
         }
         @media (min-width:481px) and (max-width:1200px){
@@ -95,6 +101,8 @@
         .nav-1 h1{
             text-align: center;
             margin-top: 5px;
+            color: blue;
+            /* background: linear-gradient(blue , red); */
         }
         }
         @media (min-width:1201px) and (max-width:1600px){
@@ -118,6 +126,8 @@
         .nav-1 h1{
             text-align: center;
             margin-top: 5px;
+            color: blue;
+            /* background: linear-gradient(blue , red); */
         }
         }
         @media (min-width:1601px) and (max-width:3562px){
@@ -142,10 +152,12 @@
             text-align: center;
             margin-top: 5px;
             font-size: 50px;
+            color: blue;
         }
         }
         .h1 {
             margin-top: 10px;
+            color: rgb(54, 44, 231);
         }
        
     </style>
