--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             background: radial-gradient(white, pink);
             align-items: center;
             }
+            .h1{
+                margin-top: 20px;
+            }
           
             .nav-1{
             background-color: rgb(163, 239, 116);
