--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .container {
             align-items: center;
             width: 300px;
-            height: 40vh;
+            height: 50vh;
             color: red;
             border: 5px solid black;
             /* margin: 20px 500px; */
@@ -29,7 +29,7 @@
         @media (min-width:50px) and (max-width:318px){
             .container{
             width: 90%;
-            height: 30vh;
+            height: 40vh;
             color: red;
             border: 1px solid black;
             border-radius: 50%;
@@ -57,7 +57,7 @@
         @media (min-width:319px) and (max-width:480px){
             .container{
             width: 200px;
-            height: 30vh;
+            height: 40vh;
             color: red;
             border: 1px solid black;
             border-radius: 50%;
@@ -85,7 +85,7 @@
         @media (min-width:481px) and (max-width:1200px){
             .container{
             width: 250px;
-            height: 30vh;
+            height: 40vh;
             color: red;
             border: 1px solid black;
             /* border-radius: 50%; */
@@ -111,7 +111,7 @@
         @media (min-width:1201px) and (max-width:1600px){
             .container{
             width: 300px;
-            height: 30vh;
+            height: 40vh;
             color: red;
             border: 1px solid black;
             margin: 0px auto;
@@ -136,7 +136,7 @@
         @media (min-width:1601px) and (max-width:3562px){
             .container{
             width: 300px;
-            height: 30vh;
+            height: 40vh;
             color: red;
             border: 1px solid black;
             margin: auto;
@@ -165,15 +165,27 @@
        
     </style>
     <script>
-        let a;
-        let date;
-        let time;
-        setInterval(() => {
-            a = new Date();
-            date = a.getDate() + '/' + a.getMonth() + '/' + a.getFullYear();
-            time = a.getHours((12)) + ':' + a.getMinutes() + ':' + a.getSeconds();
-            document.getElementById('time').innerHTML = time + " on " + date;
-        }, 1000);
+        // let a;
+        // let date;
+        // let time;
+        // setInterval(() => {
+        //     a = new Date();
+        //     date = a.getDate() + '/' + a.getMonth() + '/' + a.getFullYear();
+        //     time = /*a.getHours()>12? a.getHours()-12:*/ a.getHours() + ':' + a.getMinutes() + ':' + a.getSeconds();
+        //     document.getElementById('time').innerHTML = time + " on " + date;
+        // }, 1000);
+          function showTime()
+        {
+            let date = new Date();
+            let a= date.getDate() + '/' + date.getMonth() + '/' + date.getFullYear();
+            let hours = date.getHours()>12 ? date.getHours()-12:date.getHours();
+            let min = date.getMinutes()<10 ? "0"+date.getMinutes():date.getMinutes();
+            let sec = date.getSeconds()<10 ? "0"+date.getSeconds():date.getSeconds();
+            let x=date.getHours()<=12?"AM":"PM";
+            time.innerHTML= hours +":"+min+":"+sec+" "+x + " on "+ a;
+
+        };
+        setInterval(showTime,1000);
     </script>
 </head>
 
