--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             align-items: center;
             /* margin-top: 200px; */
         }
-        @media (min-width:50px) and (max-width:318px){
+        @media (min-width:52px) and (max-width:318px){
             .container{
             width: 90%;
-            height: 30vh;
+            height: 15vh;
             color: red;
             border: 1px solid black;
             border-radius: 50%;
@@ -49,15 +49,17 @@
         } 
         .nav-1 h1{
             text-align: center;
-            margin-top: 5px;
+            margin: auto;
             color: blue;
+            padding-top: 35px;
+            font-size: 40px;
             /* background: linear-gradient(blue , red); */
         }
         }
         @media (min-width:319px) and (max-width:480px){
             .container{
             width: 200px;
-            height: 30vh;
+            height: 15vh;
             color: red;
             border: 1px solid black;
             border-radius: 50%;
@@ -66,9 +68,9 @@
             background: radial-gradient(white, pink);
             align-items: center;
             }
-            .h1{
+            /* .tm{
                 margin-top: 20px;
-            }
+            } */
           
             .nav-1{
             background-color: rgb(163, 239, 116);
@@ -78,6 +80,9 @@
         .nav-1 h1{
             text-align: center;
             margin-top: 5px;
+            padding-top: 30px;
+            font-size: 45px;
+            /* font-family: Georgia, 'Times New Roman', Times, serif; */
             color: blue;
             /* background: linear-gradient(blue , red); */
         }
@@ -85,15 +90,19 @@
         @media (min-width:481px) and (max-width:1200px){
             .container{
             width: 250px;
-            height: 40vh;
+            height: 15vh;
             color: red;
             border: 1px solid black;
+            border-radius: 5px;
             /* border-radius: 50%; */
             margin: auto;
             text-align: center;
             /* background: radial-gradient(white, pink); */
             align-items: center;
             background: transparent;
+            }
+            .h1{
+                margin-top: 20px;
             }
            
             .nav-1{
@@ -105,15 +114,18 @@
             text-align: center;
             margin-top: 5px;
             color: blue;
+            padding-top: 25px;
+            font-size: 55px;
             /* background: linear-gradient(blue , red); */
         }
         }
         @media (min-width:1201px) and (max-width:1600px){
             .container{
             width: 300px;
-            height: 40vh;
+            height: 15vh;
             color: red;
             border: 1px solid black;
+            border-radius: 5px;
             margin: 0px auto;
             text-align: center;
             background: radial-gradient(white, pink);
@@ -130,15 +142,18 @@
             text-align: center;
             margin-top: 5px;
             color: blue;
+            padding-top: 25px;
+            font-size: 55px;
             /* background: linear-gradient(blue , red); */
         }
         }
-        @media (min-width:1601px) and (max-width:3562px){
+        @media (min-width:1601px) and (max-width:3762px){
             .container{
             width: 300px;
-            height: 40vh;
+            height: 15vh;
             color: red;
             border: 1px solid black;
+            border-radius: 5px;
             margin: auto;
             text-align: center;
             /* background: radial-gradient(white, pink); */
@@ -154,7 +169,9 @@
         .nav-1 h1{
             text-align: center;
             margin-top: 5px;
-            font-size: 50px;
+            font-size: 60px;
+            padding-top: 20px;
+            /* font-size: 40px; */
             color: blue;
         }
         }
@@ -191,11 +208,11 @@
 
 <body>
     <nav class="nav-1">
-        <h1>Amit Dhatterwal</h1>
+        <h1 >Amit Dhatterwal</h1>
     </nav>
     <div class="container">
         <!-- <img src="./IMG20230507160213.jpg"> -->
-        <h1 class="h1">Time</h1>
+        <h1 class="tm">Time</h1>
         <h2 id="time"></h2>
     </div>
 </body>
